FCS-929: Hubs and facilities (#650)